2013-04-03  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-tests.sh: Add --multilib-options and --little-endian
	* run-elf32-tests.sh, run-uclibc-tests.sh: Add comment regarding
	the ARC_MULTILIB_OPTIONS environment variable.

2013-04-03  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-sim-mdb.exp: Deleted.
	* arc-sim-base.exp: Merged into arc-sim.exp
	* arc-sim.exp: Incorporate arc-sim-base.exp, add correct licensing
	header, allow multilib options to be specified by environment
	variable.

2013-04-02  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Bump uClibc version to arc_4_8-uclibc-mainline-dev.

2013-03-29  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Bump binutils version to 2.23.2.

2013-03-28  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-uclibc.sh: Additional sed edits for big-endian uClibc
	configuration.

2013-03-28  Simon Cook  <simon.cook@embecosm.com>

	* build-all.sh: Replace --disable-multilib with --no-multilib and
	--enable-multilib with --multilib. Change default parsing to
	allow correct option to configure scripts.
	Correct uClibc CROSS_COMPILER_PREFIX for correct endianness.

2013-03-28  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-tests.sh, run-elf32-tests.sh, run-uclibc-tests.sh: Replace
	ARC_TEST_TARGET with ARC_TEST_ADDR_ELF32 and ARC_TEST_ADDR_UCLIBC
	throughout. Add ARC_TEST_BOARD_ELF32 and ARC_TEST_BOARD_UCLIBC
	environment variables.

2013-03-28  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh, run-tests.sh: Invoke define-release.sh to set
	RELEASE, LOGDIR and RESDIR environment variables and create
	$LOGDIR and $RESDIR directories if necessary.
	* build-elf32.sh, build-uclib.sh: Use RELEASE environment variable
	for all release specific files/directories, use LOGDIR as directory
	for log files. Correct operator in test for PDF generation.
	* define-release.sh: New script.
	* run-elf32-tests.sh, run-uclibc-tests.sh: Use RELEASE environment