@@ -45,8 +45,8 @@ send_user "ARC Linux ARCAngel 4 test setup\n"
 search_and_load_file "library file" "arc-linux-generic.exp" ${boards_dir}
 
 # Set up remote target generic login info. The hostname is specified
-# generically via the environment variable ARC_TEST_TARGET.
-set_board_info hostname $env(ARC_TEST_TARGET)
+# generically via the environment variable ARC_TEST_ADDR_UCLIBC.
+set_board_info hostname $env(ARC_TEST_ADDR_UCLIBC)
 set_board_info username root
 set_board_info password ""
 
@@ -67,5 +67,5 @@ set_board_info slow_simulator 0
 
 if { $tool == "gdb" } {
     # IP address of target
-    set_board_info sockethost "$env(ARC_TEST_TARGET):"
+    set_board_info sockethost "$env(ARC_TEST_ADDR_UCLIBC):"
 }
